--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <!-- Repeat the above fake text block as needed -->
         </div>
         <div id="confirm-button">Are you sure to continue?</div>
-        <div id="link"><a href="https://giproamazing.github.io/ThiswebsiteisforciphersolversandplaintextsopversidontreccomendyounonsmsrtypsntstotrythewebsiteLol/" target="_blank">Go to</a></div>
+        <div id="link"><a href="https://giproamazing.github.io/Click-here/" target="_blank">Go to Click Here</a></div>
     </div>
     <div id="message">You failed to solve, thanks for wasting the time</div>
     <script>
@@ -130,6 +130,8 @@
             if (inputValue === 'YJHAS') {
                 document.getElementById('fake-text').style.display = 'block';
                 document.getElementById('confirm-button').style.display = 'block';
+            } else if (inputValue.toLowerCase() === 'click here') {
+                window.location.href = 'https://giproamazing.github.io/Click-here/';
             }
         });
 
@@ -138,4 +140,4 @@
         });
     </script>
 </body>
-</html>
+    </html>
