--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 0;
-            padding: 0;
+            padding-bottom: 60px; /* Ensure content doesn't overlap the footer */
         }
         #countdown {
             font-size: 1.2em;
@@ -76,6 +76,7 @@
             width: 100%;
             text-align: center;
             font-size: 0.9em;
+            z-index: 1000; /* Ensure it stays on top of other elements */
         }
     </style>
 </head>
