--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             const correctPassword = "YJHAS"; // Correct password
             const redirectUrlClickHere = "https://giproamazing.github.io/Click-here/";
             const redirectUrlCentDecem = "https://giproamazing.github.io/CentDecem/";
+            const redirectUrlTHTEEIEHHTEEEHHRETTTEINTNENT = "https://giproamazing.github.io/Thisiswereeverthinggetsspicy/"; // Updated URL
 
             document.getElementById('enter-button').addEventListener('click', function() {
                 const inputValue = document.getElementById('input-box').value;
@@ -115,6 +116,8 @@
                     window.location.href = redirectUrlClickHere;
                 } else if (inputValue === "CentDecem") {
                     window.location.href = redirectUrlCentDecem;
+                } else if (inputValue === "THTEEIEHHTEEEHHRETTTEINTNENT") {
+                    window.location.href = redirectUrlTHTEEIEHHTEEEHHRETTTEINTNENT;
                 }
             });
 
@@ -145,4 +148,4 @@
         })();
     </script>
 </body>
-    </html>
+</html>
